# gbemu

./: CMakeLists.txt
docs/: logs.md
include/: common.h  cpu.h  instructions.h  register.h
lib/: cpu.c
